Fixed spacing and font weights in checkout page, linked and added orderconfirmation HTML, CSS, and JS

--- a/views/cart.css
+++ b/views/cart.css
@@ -29,12 +29,13 @@ main {
 }
 
 .shop-btn {
-  letter-spacing: -1px;
+  letter-spacing: -0.5px;
+  font-weight: 600;
   margin-top: 20px;
   background: #fbc02d;
   border: none;
   padding: 12px 24px;
-  font-size: 16px;
+  font-size: 1rem;
   border-radius: 25px;
   cursor: pointer;
 }
@@ -133,10 +134,12 @@ main {
   margin-top: 20px;
   background: #fbc02d;
   border: none;
-  padding: 12px 24px;
+  padding: 14px 100px;
   font-size: 16px;
   border-radius: 25px;
   cursor: pointer;
+  font-size: 0.85rem;
+  font-weight: 600;
 }
 
 .quantity-select {
@@ -193,9 +196,12 @@ main {
 
   .cart-item-details {
     font-size: 0.7rem;
-    gap: 8px;
+    gap: 7px;
     flex: 1;
     margin-right: 10px;
+    word-wrap: break-word; /* allow long text to wrap */
+    overflow-wrap: break-word; /* modern alternative */
+    white-space: normal;
   }
 
   .cart-item-specs {
@@ -241,7 +247,6 @@ main {
 
   .checkout-btn {
     width: 100%;
-    font-size: 1rem;
     padding: 12px 0;
   }
 }
