--- a/views/checkout.css
+++ b/views/checkout.css
@@ -46,6 +46,7 @@ section label {
   border-top: 1px solid #ccc;
   padding-top: 16px;
   font-size: 0.9rem;
+  letter-spacing: -0.5;
 }
 
 .checkout-totals div,
@@ -56,8 +57,14 @@ section label {
 }
 
 .summary-total {
-  font-weight: bold;
+  font-weight: 400; /* Bold */
+  font-size: 0.9rem;
   margin-top: 12px;
+}
+
+.summary-total strong {
+  font-weight: 650;
+  font-size: 1.1rem; /* Bigger for the total amount */
 }
 
 .pay-btn,
@@ -68,8 +75,9 @@ section label {
   background: #fbc02d;
   border: none;
   border-radius: 30px;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 0.85rem;
+  font-weight: 600;
+  letter-spacing: -0.5px;
   cursor: pointer;
 }
 
@@ -85,20 +93,44 @@ section label {
 /* Product container */
 .checkout-summary-box {
   background-color: #f2f2f2; /* Light grey background */
-  padding: 16px;
-  border-radius: 8px;
+  padding: 0 10px 0 10px;
   margin: 20px 0;
 }
 
 .checkout-summary-box #checkout-cart-summary > div {
-  padding: 10px 0;
+  padding: 12px 0 1px 0;
 }
 
-.checkout-summary-box #checkout-cart-summary > div:last-child {
-  border-bottom: none;
+.checkout-item-row {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  margin-bottom: 12px;
 }
 
-@media (min-width: 768px) {
+.checkout-item-img {
+  width: 100px;
+  margin-left: 15px;
+  margin-right: 17px;
+  height: auto;
+  object-fit: contain;
+}
+
+.checkout-item-details {
+  font-weight: 600px;
+  font-size: 0.7rem;
+}
+
+.checkout-item-price {
+  text-align: right;
+  margin-right: 15px;
+  margin-left: auto;
+  font-size: 0.7rem;
+  font-weight: 400;
+  white-space: nowrap;
+}
+
+@media (max-width: 768px) {
   .checkout-container,
   .confirmation-container {
     max-width: 700px;
@@ -106,6 +138,25 @@ section label {
 
   h1 {
     font-size: 2rem;
+  }
+
+  .checkout-item-img {
+    width: 90px;
+    margin-right: 7px;
+    margin-left: 5px;
+  }
+
+  .checkout-item-details {
+    font-size: 0.65rem;
+  }
+
+  .checkout-item-price {
+    text-align: right;
+    margin-right: 15px;
+    margin-left: 2px;
+    font-size: 0.65rem;
+    font-weight: 400;
+    white-space: nowrap;
   }
 
   .pay-btn,
